--- a/trabalho.css
+++ b/trabalho.css
@@ -1,6 +1,7 @@
 #logo {
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 30
+    0px;
 
 }
 
@@ -8,20 +9,18 @@
 .descricao {
 
     display: flex;
-    background-color: beige;
+    background-color: 
     padding: 8px;
     border-radius: 20px;
-    height: 50px;
     margin: 10px;
 
 }
 
 
-#imagem-principal {
-    width: 170px;
-    height: 170px;
+#imagem-descricao {
+    width: 200px;
+    height: 150px;
     border-radius: 20px;
-    border: 1px solid black;
 
 }
 
@@ -35,3 +34,20 @@ justify-content: center;
 align-items: center;
 
 }
+
+.categorias {
+width: 100%;
+display: flex; 
+gap: 50px;
+}
+
+.categorias button {
+width: 85px;
+height: 40px;
+font-size: 15px;
+border-radius: 10px;
+
+}
+
+PRODUTOS
+
